hphp/test/slow/class-ptr/is-class-or-classname.php.expectf

Fatal error: "is" and "as" operators cannot be used with a class_or_classname type in %s/class-ptr/is-class-or-classname.php on line 8
